--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input type="text" class="inputField" placeholder="Full Name" required>
             <input type="email" class="inputField" placeholder="Email" required>
             <input type="password" class="inputField" placeholder="Password" required>
-            <input type="text" class="inputField" placeholder="Confirm Password" required>
+            <input type="" class="inputField" placeholder="Confirm Password" required>
             <input type="date" class="inputField" placeholder="MM/DD/YYYY" required>
             <div>
                 <input type="radio" name="work" id="student" value="student" required>
